overflow fixed

--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -25,6 +25,7 @@
 #wasteStreams {
     overflow: -moz-scrollbars-vertical;
     overflow-y: scroll;
+    height: 300px;
 }
 #dashboard-footer1, #dashboard-footer2, #dashboard-footer3 {
     box-shadow: none;
